# API-intelbras

./: .env  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 45897e896b0d_alteração_tabela_produto.py  9b751f702042_criação_de_role_para_usuario.py  ef266295b881_inicial.py  ef52012676f6_adiciona_tabela_produto.py
api_intelbras/: app.py  teste.py
api_intelbras/api/v1/: api.py
api_intelbras/api/v1/endpoints/: auth.py  credencial.py  produto.py  users.py
api_intelbras/core/: security.py  settings.py  token.py
api_intelbras/database/: database.py  session.py
api_intelbras/models/: apikey.py  models.py  produto.py  user.py
api_intelbras/schemas/: apikey.py  auth.py  produto.py  user.py
